# expansion-draft

./: .env.production  .flake8  .gitignore  Dockerfile  LICENSE  Makefile  README.md  apprunner.yaml  main.py  package-lock.json  package.json  pyproject.toml  vue.config.js
.githooks/: pre-push
backend/: constants.py  db.py  main.py  test_script.py
backend/domain/: __init__.py  existing_team.py  frontend_interface.py  optimization_parameters.py  player.py  team.py  team_name.py
backend/optimize/: existing_team.py  main.py  seattle_draft.py
data/: Player_Master_Auto.csv  Summary_Master_Auto.csv
frontend/: .env.development  package-lock.json  package.json
frontend/src/: BarChart.js  router.js
frontend/src/components/: ExpansionPlayerTable.vue  Figure.vue  OriginalTeam.vue  PlayerTable.vue  SelectedPlayerTable.vue  TableCheckbox.vue  TeamSlider.vue
frontend/src/styles/: _main.scss  _variables.scss
public/: index.html
src/: App.vue  BarChart.js  main.js
src/assets/: TeamData.json  metrics.json  team_data.json
src/components/: ExpansionPlayerTable.vue  ExpansionTeam.vue  ExposedCheckbox.vue  Figure.vue  FooterArea.vue  HeaderArea.vue  IntroModal.vue  MainArea.vue  OriginalTeam.vue  PlayerTable.vue  ProtectedCheckbox.vue  SelectedPlayerTable.vue  SummaryTable.vue  TableCheckbox.vue  TeamRequirementTable.vue  TeamSlider.vue  TeamTable.vue
src/css/: theme.css
src/styles/: _main.scss  _variables.scss
src/views/: About.vue  Faq.vue  Home.vue  NotFound.vue
store/: index.js
store/data/: ConstraintsInfo.json  MetricsInfo.json  TeamsInfo.json
(+3 files in other folders)
